<resources>
    <string name="app_name">My Contact List</string>
    <string name="contactList">Contact List</string>
    <string name="button_to_display_a_list_of_contacts">Button to Display a List of Contacts</string>
    <string name="button_to_display_the_map">Button to Display the Map</string>
    <string name="button_to_display_settings">Button to Display Settings</string>
    <string name="save">Save</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="contact">Contact:</string>
    <string name="name">Name</string>
    <string name="address">Address:</string>
    <string name="enter_street_address">Enter Street Address</string>
    <string name="cell_phone">Cell Phone:</string>
    <string name="home_phone">Home Phone:</string>
    <string name="zipcode">Zipcode</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="cell_phone_number">Cell Phone Number</string>
    <string name="enter_home_phone_number">Enter Home Phone Number</string>
    <string name="change">Change</string>
    <string name="_01_01_1970">01/01/1970</string>
    <string name="birthday">Birthday</string>
    <string name="textLatitude">Latitude</string>
</resources>