<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="151dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <ImageButton
            android:id="@+id/imageButtonList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/button_to_display_a_list_of_contacts"
            app:srcCompat="@drawable/contactlisticon" />

        <ImageButton
            android:id="@+id/imageButtonMap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/button_to_display_the_map"
            app:srcCompat="@drawable/mapicon" />

        <ImageButton
            android:id="@+id/imageButtonSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription='@string/button_to_display_settings'
            app:srcCompat="@drawable/settingsicon" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/toolbar_background"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ToggleButton
            android:id="@+id/toggleButtonEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="32dp"
            android:layout_weight="1"
            android:text="@string/togglebutton" />

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:text="@string/save" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textContact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/contact"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:autofillHints="name"
                android:ems="14"
                android:hint="@string/name"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textContact">

                <requestFocus />
            </EditText>


            <TextView
                android:id="@+id/textAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/address"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editName" />

            <EditText
                android:id="@+id/editAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:autofillHints="address"
                android:ems="16"
                android:hint="@string/enter_street_address"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:nextFocusDown="@id/editCity"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textAddress" />

            <EditText
                android:id="@+id/editCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:ems="9"
                android:hint="City"
                android:imeOptions="actionNext"
                android:inputType="textCapWords"
                android:nextFocusDown="@id/editState"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editAddress" />

            <EditText
                android:id="@+id/editState"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="8dp"
                android:ems="2"
                android:hint="State"
                android:imeOptions="actionNext"
                android:inputType="textCapCharacters"
                android:maxLength="2"
                android:nextFocusDown="@id/editZipcode"
                app:layout_constraintStart_toEndOf="@id/editCity"
                app:layout_constraintTop_toBottomOf="@id/editAddress" />

            <EditText
                android:id="@+id/editZipcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="8dp"
                android:ems="5"
                android:hint="Zipcode"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="5"
                android:nextFocusDown="@id/editHome"
                app:layout_constraintStart_toEndOf="@id/editState"
                app:layout_constraintTop_toBottomOf="@id/editAddress" />

            <TextView
                android:id="@+id/textHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="Home Phone:"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editCity" />

            <EditText
                android:id="@+id/editHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:ems="8"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:maxLength="14"
                android:nextFocusDown="@id/editCell"
                app:layout_constraintStart_toEndOf="@id/textHome"
                app:layout_constraintTop_toBottomOf="@id/editCity" />

            <TextView
                android:id="@+id/textCell"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="16dp"
                android:text="Cell Phone:"
                app:layout_constraintStart_toEndOf="@id/editHome"
                app:layout_constraintTop_toBottomOf="@id/editCity" />

            <EditText
                android:id="@+id/editCell"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:ems="8"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:maxLength="14"
                android:nextFocusDown="@id/editEMail"
                app:layout_constraintStart_toEndOf="@id/textCell"
                app:layout_constraintTop_toBottomOf="@id/editCity" />

            <TextView
                android:id="@+id/textEMail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="Email Address:"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editHome" />

            <EditText
                android:id="@+id/editEMail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:ems="16"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textEMail" />

            <TextView
                android:id="@+id/textBDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/birthday"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editEMail" />

            <TextView
                android:id="@+id/textBirthday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="24dp"
                android:text="@string/_01_01_1970"
                app:layout_constraintStart_toEndOf="@id/textBDay"
                app:layout_constraintTop_toBottomOf="@id/editEMail" />

            <Button
                android:id="@+id/buttonBirthday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="60dp"
                android:text="@string/change"
                app:layout_constraintBaseline_toBaselineOf="@id/textBirthday"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>